docs: modified file index

--- a/pages/main/index.html
+++ b/pages/main/index.html
@@ -30,14 +30,14 @@
                    <button class="btn">Make a friend</button>
                 </div>
                 <div class="header-content-img">
-                    <img src="../../assets/images/puppy.png">
+                    <img src="./images/puppy.png">
                 </div>
             </div> 
       </div>
 
       <div class="about">
         <div class="about-img"></div>
-             <img src="../../assets/images/about-pets.png">
+             <img src="./images/about-pets.png">
         <div class="about-content">
             <h3>About the shelter “Cozy House”</h3>
             <p>Currently we have 121 dogs and 342 cats on our hands and statistics show that only 20% of them will find a family. The others will continue to live with us and will be waiting for a lucky chance to become dearly loved.</p>
@@ -49,17 +49,17 @@
            <div class="pets-content-title">Our friends who are looking for a house</div>
            <div class="cards">
               <div class="card-1">
-                 <img src="../../assets/images/pets-katrine.png">
+                 <img src="./images/pets-katrine.png">
                  <h3>Katrine</h3>
                  <button class="card-btn">Learn more</button>
               </div>
               <div class="card-2">
-                <img src="../../assets/images/pets-jennifer.png">
+                <img src="./images/pets-jennifer.png">
                 <h3>Jennifer</h3>
                 <button class="card-btn">Learn more</button>
              </div>
              <div class="card-3">
-                <img src="../../assets/images/pets-woody.png">
+                <img src="./images/pets-woody.png">
                 <h3>Woody</h3>
                 <button class="card-btn">Learn more</button>
              </div>
@@ -71,39 +71,39 @@
         <div class="help-title">How you can help our shelter</div>
         <div class="icons">
             <div class="icon-1">
-                <img src="../../assets/icons/icon-pet-food.svg">
+                <img src="./icons/icon-pet-food.svg">
                 <h3>Pet food</h3>
             </div>
             <div class="icon-2">
-                <img src="../../assets/icons/icon-transportation.svg">
+                <img src="./icons/icon-transportation.svg">
                 <h3>Transportation</h3>
             </div>
             <div class="icon-3">
-                <img src="../../assets/icons/icon-toys.svg">
+                <img src="./icons/icon-toys.svg">
                 <h3>Toys</h3>
             </div>
             <div class="icon-4">
-                <img src="../../assets/icons/icon-bowls-and-cups.svg">
+                <img src="./icons/icon-bowls-and-cups.svg">
                 <h3>Bowls and cups</h3>
             </div>
             <div class="icon-5">
-                <img src="../../assets/icons/icon-shampoos.svg">
+                <img src="./icons/icon-shampoos.svg">
                 <h3>Shampoos</h3>
             </div>
             <div class="icon-6">
-                <img src="../../assets/icons/icon-vitamins.svg">
+                <img src="./icons/icon-vitamins.svg">
                 <h3>Vitamins</h3>
             </div>
             <div class="icon-7">
-                <img src="../../assets/icons/icon-medicines.svg">
+                <img src="./icons/icon-medicines.svg">
                 <h3>Medicines</h3>
             </div>
             <div class="icon-8">
-                <img src="../../assets/icons/icon-collars-leashes.svg">
+                <img src="./icons/icon-collars-leashes.svg">
                 <h3>Collars / leashes</h3>
             </div>
             <div class="icon-9">
-                <img src="../../assets/icons/icon-sleeping-area.svg">
+                <img src="./icons/icon-sleeping-area.svg">
                 <h3>Sleeping areas</h3>
             </div>
         </div>
